create github pages

--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="05gPbPgsfL/C32avCDuKODGOD/PMkZxGe6bbLGdEp/BRaurhzPXvqmxQBR3R41d/JuTj6LE/aGB5rTlnYPKbaxA0NWWuYAASXYrTAgRQggZPIVEQ6ULSij7hsOpNda4Q">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VJFk4kD6h9FB7taiEC33Ub2wWDgYgosT3dOUQMOaZ35u8QyV9nkvSMO7yQRfLrPuraQGS87Wt4MGS0q1HrP/+8r1KAqIPUOsZoc7jJ5mgDoMF8IhQbJZ/op6Hrvl0Kej">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
