--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Bozyu+WWi/zjiv3CheHdkP3AWswM/0z9OUMbBSXpPpPILE0/IBHrFxf/GCDip671k4uEWCECWfkc5hTXElBhjkk7dPGMZZzgNb3G4JAAaMt+BZA1gSnslTgDbVnXHIJ7">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JfQTjcOVjqIRklrfN5OsKTsuOFh3ECxQ4u705hyXaCuujbYm2jlvlYoQg8qGQuWFd5cxKQNpRVgjnoaCANy8LTFJ+pjX4Sv7CjSKBssWRWwfI3i7gHdWmYHHG9RX7Yxe">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
