--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -92,24 +92,22 @@
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-7">Barrett Insurance</h5>
-                        <p class="mbr-text align-left mbr-fonts-style display-7">125 W. Chicago St.<br>Jonesville, MI 49250<br><br><strong>Phone:</strong> (517) 849-1000<br><strong>Toll Free:</strong> (800) 451-0717<br><strong>Fax: </strong>(517) 849-0077&nbsp;<br><strong>
+                        <p class="mbr-text align-left mbr-fonts-style display-7">125 W. Chicago St.<br>Jonesville, MI 49250<br><br><strong>Hours:</strong> M-F 8:00 A.M. to 5:00 P.M.<strong><br></strong><br><strong>Phone:</strong> (517) 849-1000<br><strong>Toll Free:</strong> (800) 451-0717<br><strong>Fax: </strong>(517) 849-0077&nbsp;<br><strong>
                             Email:</strong> insure@barrettins.com</p>
                     </div>
                 </div>
                 <div data-form-type="formoid">
-                    <div data-form-alert="" hidden="">
-                        Thanks for filling out the form!
-                    </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6Q+E5BO/vdFSL2TqkTOKISbab+PNbaA/cZUh2shprza6LvkSrkFk+kvDdUVtxsuDevFSomx9Jf9p+tK6QwZYFmtqd9yKADUriSKBiXSJPegwoprk3hENwwCj1GNvieEf">
+                    <div data-form-alert="" hidden="">Thank you for contacting us.</div>
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vDq/HMQojFlkhEr+RdcEVxtE1ubhepOH1zf6q4AT3Tb6LJKtaxC90wYe92hJFMcchmp5QKhsacqMRLaJqj/xTc/7ZHZXecv4SVlCX19KG2bEf7LgqTR2NIObiuNGGpsQ">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
                             </div>
                             <div class="col-md-6 multi-horizontal" data-for="phone">
-                                <input type="text" class="form-control input" name="phone" data-form-field="Phone" placeholder="Phone" required="" id="phone-form4-1x">
+                                <input type="text" class="form-control input" name="phone" data-form-field="Phone" placeholder="Phone Number" required="" id="phone-form4-1x">
                             </div>
                             <div class="col-md-12" data-for="email">
-                                <input type="text" class="form-control input" name="email" data-form-field="Email" placeholder="Email" required="" id="email-form4-1x">
+                                <input type="text" class="form-control input" name="email" data-form-field="Email" placeholder="Email Address" required="" id="email-form4-1x">
                             </div>
                             <div class="col-md-12" data-for="message">
                                 <textarea class="form-control input" name="message" rows="3" data-form-field="Message" placeholder="Message" style="resize:none" id="message-form4-1x"></textarea>
