create github pages

--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -97,8 +97,8 @@
                     </div>
                 </div>
                 <div data-form-type="formoid">
-                    <div data-form-alert="" hidden="">Thank you for contacting us.</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vDq/HMQojFlkhEr+RdcEVxtE1ubhepOH1zf6q4AT3Tb6LJKtaxC90wYe92hJFMcchmp5QKhsacqMRLaJqj/xTc/7ZHZXecv4SVlCX19KG2bEf7LgqTR2NIObiuNGGpsQ">
+                    <div data-form-alert="" hidden="">Thank you for contacting us!</div>
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FH335bV05CxakrO0r2R55bZhTKmtP+CJjfxEATueLaoni5KYX/yjOKodPlRsxxhrIkHb8J1rgNqawLbVCS1pvc+CJJzq+RrtqvtWHJKK2KACaY6cKzjI3A7e0X3AnFsK">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
