create github pages

--- a/page10.html
+++ b/page10.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
 
     
 
@@ -89,7 +89,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u+41IVqgJu+l5W0s1n7cSthLLez0bj0DN/qRvoQ4tK7eYVpDtRF3G+23FIfNk7TJLU+cbuTsQkP40JABx5F8dtWXrlpxQkKrRE3XKSLB8lIQGvxRpSo0fP5UPFXkTcWF">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QzHTVgoTXD6HnGJGd/U+IrPwrnqH13LtT6CKcfGSKfpdTsFJT1QtE22RCEbw0EYfetC6brVXKCRkl06bmTkrwCoJ6XLtV7wz7jIws1pxfFCUSyBTS2NR1LZ63h2DjMkT">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
