--- a/page15.html
+++ b/page15.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6PqtbXkRV" id="content5-3z">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6PqtbXkRV" id="content5-3z">
 
     
 
@@ -89,7 +89,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3icf8FQtgYE1uCN2kbDK0PAgAgxE3FBU9pB6VglPalwtHuY7t+lgTpmRubObGtDfiJ/CSAxjxEDY46aVavyU9uOjvLi6U/nqYuLYQsRuMoZCKrOXKwbg2AxESNMmp1D5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Sq1GvFZkuFfnnAunwU5zUdS8eZsWX1xPCC6FC1ZiLa4WaFCWkT3VrpJXMvbmGUocPRF8QjGdyr/pveW3Z9rVuM+lWynN9uz82iQ7bxVaImgBZt9oQDtFOBh2mbfpDzMn">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
