--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -98,7 +98,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="inAecLy+ZcAYmofq8QTfTok4sxcKX+PRZy70qFTBeinALjAV+Vsl4SXfUlJK9YLSU6t5N24osK1alONr3sPnEvvoDBsXE2TZctE3uZe8XZLwPSLVl8vniFxq2Yz8DPWZ">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e7uF9rs72e1vvzK7Ei+Hz+X38YsokzVxcnE6KzGBbzoxLlGDHg+OfxYe6atAe3IPmBsEaWKsu87j2N9somEEx7nF+6ClV9AAjHsROdfhGx7E2Wi1i8iFdgu2MEQQteLY">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
