--- a/page12.html
+++ b/page12.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6LPryrx6o" id="content5-47">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6LPryrx6o" id="content5-47">
 
     
 
@@ -89,7 +89,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UNDhQzi/tr6ehF7VMEOUm7nWlzyrqBKoR6HNNv6MyyYOwdHYnj9jgAkmdk5QEZQgddS7vsaNdg0RqDYO4rqiOcYgyKNQBmVJMONemFEMuUM39f0MvSGnH68uySFR7wsM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wEK8zBnJ0PbI27RpUQgk321wpktAt9OUXUOEh4W3yA8O2lcLk5Rarz6rH3YE5x+3+tdXuxGYQohs+ax/vWAK37M19oRoSZaxhnbT4oWqh8WzXt6eoKthVP/cxRB1kyUN">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
