create github pages

--- a/page14.html
+++ b/page14.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6PqlJfgmk" id="content5-3v">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="mbr-section content5 cid-r6PqlJfgmk" id="content5-3v">
 
     
 
@@ -102,7 +102,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="o3ow2J5Azxs/fKAvnJGKTDpYDoCTk6DI3bDAIfxyoE9p4kJiosBY3Pw7y2CcCLm2sb8sFsv2MUyWggOZpfsCygh5/tXioQj3UwAsZhJnvi7UkRAFrumVDoj/2kkPjtLp">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IE4aYqy6wGkvoyoh37PP84623OHQ14dOG7SUN9llsGyLfC6CFteqOWtnQxUR8DH30kx0Be+AYrUh/drPx8UR0CFWRpW1HxNGbeTJlbT2HeZAhK9wZ3rfh76lI7G7mbR/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
