--- a/page10.html
+++ b/page10.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
 
     
 
@@ -102,7 +102,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3cRhgLFCj+GhA6QxDNTgn1U/9gj2KOmqjV2cVT7iEOL3iDy9ZwFIzfUBajdKnn1s5lVrnRcptSma0XRXaAZORsl1MkC64+cpXXPsnJR1uPtAR74OU4JYKQkffH2dtAFC">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6n55gHYBQltDOIiCRfFaVipBZ9sSBkaqW+UDiW3UpzYgQdJCulOFTbLvFWxfrv7vhFrzoXJgZKqaC/WwtD2rebspD/iv2vYC1h2q0C4pMqoDylESX7tnTocAdzvebmjz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
