--- a/page2.html
+++ b/page2.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -111,7 +111,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5ESkdo9DYTy/PVNLrT1xtAjbm1FtVxSOoP7jPuD35DqZ+fQPSCsFX67lLOInTMnUhirpoJeRItZHM00oEeHh3wkNuZkCLVLILbwmdCeCX4XxANzxpGb2Z3XRsHDp1yXO">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dSvqWep+N03HkFyQhFE6lg966z3afp/baka7PEw1yRT3ni0nw5zc3c7kA27tRXxWlH9FkaUyk+7FsiiOXXrfRAODSP6Q1uV9NrJJ6oJB/vaKpiff+0/iSFo/j+7VOmcS">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
