create github pages

--- a/page12.html
+++ b/page12.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section content5 cid-r6LPryrx6o" id="content5-47">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="mbr-section content5 cid-r6LPryrx6o" id="content5-47">
 
     
 
@@ -102,7 +102,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GbOqDZv6DVOB52aGDD0pgdYMYCGjvKBRqU+3LsSNZz7RNrMIt44u45x7MV4DMVSesp9oCvRomVN4Tk5WDg0tlRpBmzACXLRCW6cN4kWSYffgYdifxiG/UDUxoXq88/pM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PUblFIIgPn8S/Byv1HtX1KEaEK4s0a5zJSNBpgl01VtStL2U/eoZEGMhcYAAACIr05p2DxAuQI+PY5V+4LWjINnsZ/6ziuUQAEHnKgli1JGmsQZszcwaotKYIZxU6yoX">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
